Upgrade to latest idstore. Disable the test suite until it can be rewritten.